--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,3 +46,10 @@ margin-top: 10px;
 }
 /* Radio Button offScreen Issue */
 input[type="radio"]{display:none;}
+.single-value {
+  position: relative;
+  display: inline-block;
+  width: 100px;
+  margin: auto 0 auto auto;
+  text-align: right;
+}
